--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Finance Planner</title>
   </head>
   <body>
-    <div id="finance-planner-app"></div>
+    <div id="vue-app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
